packages/cashc/test/compiler/ParseError/incorrect_underscore_in_number_2.cash
contract Test() {
    function hello() {
        require(1000 == _1000);
    }
}
